<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name">VanSales</string>
    <string name="driver">Driver</string>
    <string name="user_name">User Name</string>
    <string name="new_pass">new_pass</string>
    <string name="confirm_new_password">confirm_new_password</string>
    <string name="settings">settings</string>
    <string name="required_data">required_data</string>
    <string name="driver_field_cannot_be_empty">driver_field_cannot_be_empty</string>
    <string name="field_cannot_be_empty">field_cannot_be_empty</string>
    <string name="should_match">should_match</string>
    <string name="please_check_empty_fields">please_check_empty_fields</string>
    <string name="user_name_field_cannot_be_empty">user_name_field_cannot_be_empty</string>
    <string name="password_field_cannot_be_empty">password_field_cannot_be_empty</string>
    <string name="please_enter_valid_data">please_enter_valid_data</string>
    <string name="this_account_is_locked">this_account_is_locked</string>
    <string name="no_internet">no_internet</string>
    <string name="add_new_pass">add_new_pass</string>
    <string name="signIn">signIn</string>
    <string name="empty_routes">Empty Routes</string>
    <string name="disconnected_posting">Disconnected while posting</string>
    <string name="damage_checklist">Damage checklist</string>
    <string name="check_all">Check All</string>
    <string name="other">Other</string>
    <string name="route_selection">Route Selection</string>
    <string name="empty_list">Empty List</string>
    <string name="syncing">syncing</string>
    <string name="done">done</string>
    <string name="syncing_details">Details</string>
    <string name="syncing_customers">Customers</string>
    <string name="syncing_materials">Materials</string>
    <string name="syncing_units">Units</string>
    <string name="syncing_truck">Truck</string>
    <string name="syncing_visits">Visits</string>
    <string name="syncing_prices">Prices</string>
    <string name="syncing_conditions">Conditions</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="start_of_day">start_of_day</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="region">region</string>
    <string name="all">all</string>
    <string name="city">city</string>
    <string name="filter_visits">filter visits</string>
    <string name="show_results">show results</string>
    <string name="search">search</string>
    <string name="visits">visits</string>
    <string name="customers_list">customers list</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="completed">completed</string>
    <string name="unfinished_visit">unfinished</string>
    <string name="finished_visit">finished</string>
    <string name="finish_visit">finish</string>
    <string name="failed_visit">failed</string>
    <string name="kilometer">KM</string>
    <string name="start">start</string>
    <string name="start_again">start again</string>
    <string name="credit">credit</string>
    <string name="order">order</string>
    <string name="cash">cash</string>
    <string name="no">no</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="separated_invoice">Separated Invoice</string>
    <string name="click_to_add_material">Add Materials</string>
    <string name="add_item">Add Item</string>
    <string name="add_free_item">Add Free Item</string>
    <string name="material_selection">Material Selection</string>
    <string name="total_invoice_price">Total Invoice Price: </string>
    <string name="credit_limit">Credit Limit: </string>
    <string name="pay_all_invoice">Pay All Invoice</string>
    <string name="enter_paid_amount">Enter Paid Amount</string>
    <string name="top_up_credit_limit">Limit</string>
    <string name="credit_exceed_alert_dialog">Credit Exceed</string>
    <string name="FOC_exceed_alert_dialog">Foc Exceed</string>
    <string name="returns_more_than_sold">Foc Exceed</string>
    <string name="total_foc">Total FOC: </string>
    <string name="total_group_foc">Total Group FOC: </string>
    <string name="you_have_exceeded_top_up_limit">Total Have exceeded topup  FOC: </string>
    <string name="you_missed_to_add_foc_items">No FOC Added: </string>
    <string name="proceed_alert_dialog">Total Have exceeded topup  FOC: </string>
    <string name="send_approval">Send Approval ?</string>
    <string name="select_item_alert_dialog">Select Item</string>
    <string name="back_alert_dialog">Select Item</string>
    <string name="warning_alert_dialog">Warning</string>
    <string name="total_item_price">TotalPrice:</string>
    <string name="quantity">Quantity:</string>
    <string name="items">items:</string>
    <string name="free">free</string>
    <string name="add_Sold_item">Add Sold Item</string>
    <string name="click_to_add_free_material">Add Free</string>
    <string name="Select_Group">Select Group:</string>
    <string name="all_groups">Select Group:</string>
    <string name="FOC_toast_message">Select Group:</string>
    <string name="no_products">No Products</string>
    <string name="price">price</string>
    <string name="available">av:</string>
    <string name="unit">unit</string>
    <string name="available_Toast_message">Available amount </string>
    <string name="total_invoice_price_with_no_discount">Available amount </string>
    <string name="manual">manual </string>
    <string name="percent">percent </string>
    <string name="amount">amount </string>
    <string name="total_discount">total_discount </string>
    <string name="details">details </string>
    <string name="offline_posting">Offline Posting :  </string>
    <string name="document_created">Document Created  </string>
    <string name="are_you_sure_post">Are you sure you want to post  </string>
    <string name="are_you_sure">Are you sure you want to proceed  </string>
    <string name="auto">auto</string>
    <string name="undo">undo</string>
    <string name="batch">batch</string>
    <string name="count">count</string>
    <string name="batch_scan">batch scan</string>
    <string name="selected_items">Selected Items</string>
    <string name="hide_counted">Hide Counted</string>
    <string name="out_of">out of</string>
    <string name="invalid_value_warning">Invalid value</string>
    <string name="exceeding_batches">Exceeding Batches value</string>
</resources>
