<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:background="@drawable/rectangle_white">


        <TextView
            android:id="@+id/invoice_details_dialog_invoiceType_textView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/bold72"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/invoice_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_invoice_logo"
            app:layout_constraintBottom_toBottomOf="@+id/invoice_details_dialog_invoiceType_textView"
            app:layout_constraintStart_toStartOf="@+id/invoice_details_dialog_invoiceType_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold72"
            android:text="@string/total_invoice_price_with_no_discount"
            android:textColor="@color/dark_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invoice_details_dialog_invoiceType_textView" />

        <TextView
            android:id="@+id/invoice_details_dialog_totalAmount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular72"
            android:text="0.000"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/invoice_details_dialog_invoiceType_textView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold72"
            android:text="@string/manual"
            android:textColor="@color/dark_text"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold72"
            android:text="@string/percent"
            android:visibility="gone"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/invoice_details_dialog_manualPercent_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular72"
            android:inputType="number"
            android:maxLength="7"
            android:text="000"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold72"
            android:text="@string/amount"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/invoice_details_dialog_manualAmount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular72"
            android:inputType="number"
            android:text="0.000"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold72"
            android:text="@string/total_discount"
            android:textColor="@color/dark_text"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/invoice_details_dialog_totalDiscount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular72"
            android:text="0.000"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold72"
            android:text="@string/total_foc"
            android:textColor="@color/dark_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/invoice_details_dialog_foc_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular72"
            android:text="0.000"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold72"
            android:text="@string/total_group_foc"
            android:textColor="@color/dark_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/invoice_details_dialog_netAmount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular72"
            android:text="0.000"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@+id/invoice_details_dialog_foc_textView" />

        <Button
            android:id="@+id/invoice_details_dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_light_blue"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invoice_details_dialog_netAmount_textView" />

        <Button
            android:id="@+id/invoice_details_dialog_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_white"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/invoice_details_dialog_ok_button"
            app:layout_constraintTop_toBottomOf="@+id/invoice_details_dialog_netAmount_textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
