<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_visits"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/filterVisitsTitle_TV"
            android:fontFamily="@font/bold72"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/view5"
            android:layout_marginTop="5dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/filterVisitsTitle_TV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:lineSpacingExtra="3dp"
            android:id="@+id/filterVisitsRegionTV"
            android:fontFamily="@font/regular72"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/view6"
            android:layout_marginTop="5dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/filterVisitsRegionTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/filterVisitsCityTV"
            android:lineSpacingExtra="3dp"
            android:fontFamily="@font/regular72"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:layout_marginTop="8dp"
            android:layout_marginStart="9dp"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/view7"
            android:layout_marginTop="5dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/filterVisitsCityTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/show_results"
            android:textAllCaps="false"
            android:background="@color/blue"
            android:textColor="#fff"
            android:id="@+id/showResults_BTN"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
