<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        android:background="@color/light_grey"
        tools:context=".view.activities.StartDayActivity">


        <View android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/start_day_header_view"/>


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_day_title_textView"
            android:text="@string/start_of_day"
            android:fontFamily="@font/bold72"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/start_day_header_view"
            app:layout_constraintStart_toEndOf="@+id/start_day_header_view" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/start_day_header_view"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/previous"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layoutDirection="ltr"
            android:id="@+id/start_day_previous_button"
            android:layout_gravity="start"
            android:fontFamily="@font/regular72"
            android:drawableTop="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="@+id/start_day_header_view"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/start_day_header_view" android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:id="@+id/start_day_next_button"
            android:layoutDirection="ltr"
            android:fontFamily="@font/regular72"
            android:layout_gravity="end"
            android:drawableTop="@drawable/ic_right_arrow"
            app:layout_constraintEnd_toEndOf="@+id/start_day_header_view"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@+id/start_day_header_view" android:layout_marginTop="8dp"/>


        <FrameLayout
            android:id="@+id/start_day_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/start_day_header_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/versionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
